--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "sass": "^1.89.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.71.0"
+    "npm-run-all": "^4.1.5"
   }
 }
